--- a/server/.env.example
+++ b/server/.env.example
@@ -20,3 +20,7 @@ SMTP_EMAIL=your_smtp_email
 SMTP_PASSWORD=your_smtp_password
 FROM_EMAIL=noreply@flowva.com
 FROM_NAME=Flowva
+
+# URLs and endpoints
+BASE_URL=http://localhost:5000
+CLIENT_URL=http://localhost:3000
